# skygfx-shadertoy

./: .gitignore  CMakeLists.txt  README.md  build_emscripten.sh  build_emscripten_debug.sh  build_emscripten_release.sh
emscripten/: shell.html
output/: index.html  index.js  index.wasm  index.wasm.map
src/: main.cpp
